Added Delete and fileter

--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
 
     <div>
         <ul class="collections">
-            Will be put dynamically
         </ul>
-        <a href="#" class="clear-tasks">Clear Tasks</a>
+        <button class="clear-tasks">Clear Tasks</button>
     </div>
     <!-- Javascript -->
     <script src="app.js"></script>
